# polaris-users-api

./: .coveragerc  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  pyproject.toml  run_local.sh  sonar-project.properties  tox.ini
.circleci/: config.yml  run_integration_tests.sh
dhos_users_api/: app.py  config.py  roles.py
dhos_users_api/blueprint_api/: __init__.py  controller.py
dhos_users_api/blueprint_development/: __init__.py  controller.py
dhos_users_api/helpers/: audit.py  auth0_authz.py  cli.py  publish.py
dhos_users_api/models/: api_spec.py  product.py  terms_agreement.py  user.py
dhos_users_api/openapi/: openapi.yaml
docs/: make_schema.py  schema.dot  schema.plantuml
integration-tests/: Makefile  README.md  docker-compose.yml  environment.py  requirements.txt
integration-tests/clients/: rabbitmq_client.py  users_api_client.py
integration-tests/data/: clinician_output_1.json  clinician_output_2.json  terms_agreement.json
integration-tests/features/: clincian_create.feature  clincian_list.feature  migration.feature
integration-tests/helpers/: json.py  security.py
integration-tests/steps/: common_steps.py  request_steps.py  response_steps.py
migrations/: env.py
migrations/versions/: 061d25d8199d_nullable_fields.py  61aa206c7e8c_baseline_data.py  7682b655ee45_terms_agreement_fields.py  e66d175c24d5_field_default.py
tests/: conftest.py  helper.py  test_api.py  test_api_spec.py  test_auth0_authz.py  test_controller.py  test_models_user.py  test_openapi.py  test_roles.py  test_terms_agreement.py
